--- a/first-vue/first.html
+++ b/first-vue/first.html
@@ -7,6 +7,14 @@
 <body>
 <div id="app">
     {{ message }}
+
+    <span v-bind:title="message">
+    鼠标悬停几秒钟查看此处动态绑定的提示信息！
+  </span>
+    <div id="app-3">
+        <p v-if="seen">现在你看到我了</p>
+    </div>
+</div>
 </div>
 </body>
 <script src="../static/js/vue.js"></script>
@@ -15,6 +23,18 @@
         el: '#app',
         data: {
             message: 'Hello Vue!'
+        }
+    })
+    var app2 = new Vue({
+        el: '#app-2',
+        data: {
+            message: '页面加载于 ' + new Date().toLocaleString()
+        }
+    })
+    var app3 = new Vue({
+        el: '#app-3',
+        data: {
+            seen: false
         }
     })
 </script>
