--- a/first-vue/first.html
+++ b/first-vue/first.html
@@ -8,13 +8,19 @@
 <div id="app">
     {{ message }}
 
-    <span v-bind:title="message">
+
+</div>
+<div>
+<span v-bind:title="message">
     鼠标悬停几秒钟查看此处动态绑定的提示信息！
   </span>
-    <div id="app-3">
-        <p v-if="seen">现在你看到我了</p>
-    </div>
 </div>
+<div id="app-3">
+    <p v-if="seen">现在你看到我了</p>
+</div>
+<div id="app-6">
+    <p>{{ message }}</p>
+    <input v-model="message">
 </div>
 </body>
 <script src="../static/js/vue.js"></script>
@@ -34,7 +40,13 @@
     var app3 = new Vue({
         el: '#app-3',
         data: {
-            seen: false
+            seen: true
+        }
+    })
+    var app6 = new Vue({
+        el: '#app-6',
+        data: {
+            message: 'Hello Vue!'
         }
     })
 </script>
